# gravity-sim

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Config.hpp  DisplayManager.hpp
src/: DisplayManager.cpp  main.cpp
